--- a/ToDoDDD.Web/Views/Issues/Index.cshtml
+++ b/ToDoDDD.Web/Views/Issues/Index.cshtml
@@ -17,7 +17,7 @@
         <tr>
             <td>@item.Id</td>
             <td>@item.Name</td>
-            <td>@item.Priority.Name</td>
+            <td>@item.Priority.Id</td>
             <td>@item.Status.Name</td>
           <td>
             <td><a asp-action="Details" asp-route-id="@item.Id" class="btn btn-success">Details</a></td>
